--- a/generateApp/client_app/views/product_details.ejs
+++ b/generateApp/client_app/views/product_details.ejs
@@ -72,7 +72,7 @@
 					<div class="product-details">
 						<h2 class="product-name"><%= product[0].product_name %></h2>
 						<div>
-							<h3 class="product-price">
+							<h3 class="product-price"id="product_price">
 								<% let formating=Intl.NumberFormat('en-US') %>
 								<%= formating.format(product[0].product_price)+" DA" %>
 							</h3>
@@ -123,6 +123,15 @@
 							<li><a href="#"><%= product[0].cat_name %></a></li>
 							<!-- <li><a href="#">Accessories</a></li> -->
 						</ul>
+
+						<% if (typeof(product_subcats) !== 'undefined' && product_subcats != null && product_subcats.length > 0) { %>
+						<%for (let i = 0; i < product_subcats.length; i++) {
+						if(product_subcats[i].product_sub_cat_price > 0) {%>
+							<div class="btnSubCatPrice" style="border: black 1px solid" data= "<%= product_subcats[i].product_sub_cat_price %>">
+								<p scope="row"><%= product_subcats[i].sub_cat_name %></p>
+								<p><%= product_subcats[i].product_sub_cat_price %></p>
+							</div>
+						<% }}} %>
 
 						<ul class="product-links">
 							<li>Suivez-nous :</li>
