--- a/generateApp/client_app/views/product_details.ejs
+++ b/generateApp/client_app/views/product_details.ejs
@@ -116,7 +116,7 @@
 									</div>
 								</div> -->
 							<button class="add-to-cart-btn productToCart_btn" idp = "<%= product[0].product_id %>" style="margin-bottom: 5px; width: 100%;"><i class="fa fa-plus"></i>Ajouter au panier</button>
-							<button class="add-to-cart-btn" onclick="location.href='/checkout/<%= product[0].product_id %>'" style="margin-bottom: 5px; width: 100%;"><i class="fa fa-shopping-cart"></i> Commander</button>
+							<button class="add-to-cart-btn CheckOutBtn1" idp = "<%= product[0].product_id %>" style="margin-bottom: 5px; width: 100%;"><i class="fa fa-shopping-cart"></i> Commander</button>
 						</div>
 						<ul class="product-links">
 							<li>Categorie :</li>
@@ -127,7 +127,7 @@
 						<% if (typeof(product_subcats) !== 'undefined' && product_subcats != null && product_subcats.length > 0) { %>
 						<%for (let i = 0; i < product_subcats.length; i++) {
 						if(product_subcats[i].product_sub_cat_price > 0) {%>
-							<div class="btnSubCatPrice" style="border: black 1px solid" data= "<%= product_subcats[i].product_sub_cat_price %>">
+							<div class="btnSubCatPrice" style="border: black 1px solid" idsub="<%= product_subcats[i].sub_cat_id %>" data= "<%= product_subcats[i].product_sub_cat_price %>">
 								<p scope="row"><%= product_subcats[i].sub_cat_name %></p>
 								<p><%= product_subcats[i].product_sub_cat_price %></p>
 							</div>
